--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,8 @@
+[build]
+  publish = "public"
+  functions = "api"
+
 [[redirects]]
-from  = "/*"
-to = "/index.html"
-status = 200
+  from = "/*"
+  to = "/index.html"
+  status = 200
