--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node index.js",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "echo 'No build step necessary'"
+
   },
   "keywords": [],
   "author": "",
